--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
    
-    <title>Leticia Ribeiro - DoWhile 2021</title>
+    <title>DoWhile 2021</title>
 </head>
 <body>
     <div class="container">
